@@ -7,80 +7,94 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-PYTHON_PACKAGE_DIR=$(shell python -c "import distutils.sysconfig;print distutils.sysconfig.get_python_lib(True) ")
-
+# TODO: fix source format warning.
 
 %:
 	dh  $@
 
-install_liblnk:
-	# Set up liblnk package directories and files
-	mkdir -p debian/liblnk/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so.*.*.* debian/liblnk/usr/lib
-
-install_liblnk_dev:
-	# Set up liblnk-dev package directories and files
-	mkdir -p debian/liblnk-dev/usr/include
-	mkdir -p debian/liblnk-dev/usr/include/liblnk
-	mkdir -p debian/liblnk-dev/usr/lib
-	mkdir -p debian/liblnk-dev/usr/lib/pkgconfig
-	mkdir -p debian/liblnk-dev/usr/share/man/man3
-	install -p -m755 debian/tmp/usr/include/*.h debian/liblnk-dev/usr/include
-	install -p -m755 debian/tmp/usr/include/liblnk/*.h debian/liblnk-dev/usr/include/liblnk
-	install -p -m755 debian/tmp/usr/lib/*.la debian/liblnk-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.a debian/liblnk-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/lib*.so debian/liblnk-dev/usr/lib
-	install -p -m755 debian/tmp/usr/lib/pkgconfig/* debian/liblnk-dev/usr/lib/pkgconfig
-	install -p -m755 debian/tmp/usr/share/man/man3/* debian/liblnk-dev/usr/share/man/man3
-
-install_liblnk_tools:
-	# Set up liblnk-tools package directories and files
-	mkdir -p debian/liblnk-tools/usr/bin
-	mkdir -p debian/liblnk-tools/usr/share/man/man1
-	install -p -m755 debian/tmp/usr/bin/* debian/liblnk-tools/usr/bin
-	install -p -m755 debian/tmp/usr/share/man/man1/* debian/liblnk-tools/usr/share/man/man1
-
-install_liblnk_python:
-	# Set up liblnk-python package directories and files
-	mkdir -p debian/liblnk-python/$(PYTHON_PACKAGE_DIR)
-	install -p -m775 debian/tmp$(PYTHON_PACKAGE_DIR)/pylnk.* debian/liblnk-python$(PYTHON_PACKAGE_DIR)
-
+.PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-python
+	dh_auto_configure -- --enable-python CFLAGS="-g"
 
+.PHONY: override_dh_auto_test
 override_dh_auto_test:
 
-override_dh_installinit: install_liblnk install_liblnk_dev install_liblnk_tools install_liblnk_python
+.PHONY: override_dh_install
+override_dh_install:
+	# Create the liblnk package.
+	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p liblnk
+	# Create the liblnk-dev package.
+	dh_install "debian/tmp/usr/include/*.h" -p liblnk-dev
+	dh_install "debian/tmp/usr/include/lib*/*.h" -p liblnk-dev
+	dh_install "debian/tmp/usr/lib/*.a" -p liblnk-dev
+	dh_install "debian/tmp/usr/lib/*.la" -p liblnk-dev
+	dh_install "debian/tmp/usr/lib/*.so" -p liblnk-dev
+	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p liblnk-dev
+	dh_install "debian/tmp/usr/share/man/man3/*" -p liblnk-dev
+	# Create the liblnk-tools package.
+	dh_install "debian/tmp/usr/bin/*" -p liblnk-tools
+	dh_install "debian/tmp/usr/share/man/man1/*" -p liblnk-tools
+	# Create the liblnk-python package.
+	dh_install -X"*_d.so" "debian/tmp/usr/lib/python*/*" -p liblnk-python
+	# The liblnk-dbg and liblnk-python-dbg packages are created by dh_strip.
+	dh_install
 
+.PHONY: override_dh_installmenu
 override_dh_installmenu:
 
+.PHONY: override_dh_installmime
 override_dh_installmime:
 
+.PHONY: override_dh_installmodules
 override_dh_installmodules:
 
+.PHONY: override_dh_installlogcheck
 override_dh_installlogcheck:
 
+.PHONY: override_dh_installlogrotate
 override_dh_installlogrotate:
 
+.PHONY: override_dh_installpam
 override_dh_installpam:
 
+.PHONY: override_dh_installppp
 override_dh_installppp:
 
+.PHONY: override_dh_installudev
 override_dh_installudev:
 
+.PHONY: override_dh_installwm
 override_dh_installwm:
 
+.PHONY: override_dh_installxfonts
 override_dh_installxfonts:
 
+.PHONY: override_dh_gconf
 override_dh_gconf:
 
+.PHONY: override_dh_icons
 override_dh_icons:
 
+.PHONY: override_dh_perl
 override_dh_perl:
 
+.PHONY: override_dh_pysupport
+override_dh_pysupport:
+
+.PHONY: override_dh_strip
+override_dh_strip:
+ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
+	dh_strip -pliblnk --dbg-package=liblnk-dbg
+	dh_strip -pliblnk-python --dbg-package=liblnk-python-dbg
+	# Move and rename the debug Python module to the right location.
+	cd debian/liblnk-python-dbg/usr/lib/debug/usr/lib/python*/*-packages && mv pylnk.so pylnk_d.so
+endif
+
+.PHONY: override_dh_shlibdeps
 override_dh_shlibdeps:
 	dh_shlibdeps -Lliblnk -l${PWD}/debian/tmp/usr/lib
 
+.PHONY: override_dh_makeshlibs
 override_dh_makeshlibs:
 	dh_makeshlibs -Xliblnk-dev
 
