@@ -82,6 +82,7 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "lnkinfo", "lnkinfo\lnkinfo.
 	ProjectSection(ProjectDependencies) = postProject
 		{A2B861D5-6751-43A9-B085-8D48F8754AC5} = {A2B861D5-6751-43A9-B085-8D48F8754AC5}
 		{65904B57-5FA2-4A3B-B9DC-7FA6460FC6F3} = {65904B57-5FA2-4A3B-B9DC-7FA6460FC6F3}
+		{CACB8D39-1E0E-4076-839D-A7504523AD83} = {CACB8D39-1E0E-4076-839D-A7504523AD83}
 		{8C13E498-6369-4792-A0CF-B7134C54561B} = {8C13E498-6369-4792-A0CF-B7134C54561B}
 		{25C60507-39C6-4564-912D-DA2E7482A00F} = {25C60507-39C6-4564-912D-DA2E7482A00F}
 		{BC27FF34-C859-4A1A-95D6-FC89952E1910} = {BC27FF34-C859-4A1A-95D6-FC89952E1910}
